[gd_scene load_steps=12 format=3 uid="uid://3bqb0fony5rd"]

[ext_resource type="Script" path="res://scripts/grid/grid.gd" id="1_sslp1"]
[ext_resource type="Script" path="res://scripts/grid/plant_layer.gd" id="2_2cwvu"]
[ext_resource type="Texture2D" uid="uid://dgbm1hmc1mupr" path="res://assets/SpriteSheet Grass.png" id="2_a4aac"]
[ext_resource type="Texture2D" uid="uid://cd1ebuwmudlcl" path="res://assets/Land.png" id="3_pg1n5"]
[ext_resource type="Script" path="res://scripts/grid/grass_layer.gd" id="4_kkisl"]
[ext_resource type="Script" path="res://scripts/grid/grid_collider.gd" id="5_xtq4c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ti6jr"]
texture = ExtResource("3_pg1n5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_6r8by"]
sources/0 = SubResource("TileSetAtlasSource_ti6jr")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8vv02"]
texture = ExtResource("2_a4aac")
texture_region_size = Vector2i(20, 20)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0

[sub_resource type="TileSet" id="TileSet_2ctks"]
sources/0 = SubResource("TileSetAtlasSource_8vv02")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7htq5"]

[node name="Grid" type="Area2D"]
script = ExtResource("1_sslp1")

[node name="GrassLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 251, 255, 251, 255, 0, 0, 2, 0, 2, 0, 0, 0, 4, 0, 251, 255, 0, 0, 2, 0, 2, 0, 0, 0, 4, 0, 4, 0, 0, 0, 2, 0, 2, 0, 0, 0, 251, 255, 4, 0, 0, 0, 2, 0, 2, 0, 0, 0)
tile_set = SubResource("TileSet_6r8by")
script = ExtResource("4_kkisl")

[node name="PlantLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 255, 255, 0, 0, 1, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_2ctks")
script = ExtResource("2_2cwvu")

[node name="GridCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7htq5")
script = ExtResource("5_xtq4c")
show_debug = false

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(3.275, 3.275)
